--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.39"
 serde = "1.0.217"
 serde_json = "1.0.134"
 sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "migrate"] }
