Added DB for listings and cards

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 chrono = "0.4.39"
 serde = "1.0.217"
 serde_json = "1.0.134"
-sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "migrate"] }
+sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "migrate", "chrono"] }
 thirtyfour = "0.35.0"
 tokio = { version = "1.42.0", features = ["full"] }
