Moved driver creation to loop so that it gets recreated each cycle

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,9 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
+    # environment:
+    #   - SE_NODE_MAX_SESSIONS=5
+    #   - SE_NODE_OVERRIDE_MAX_SESSIONS=true
     networks:
       - main
 
